# abstractness_classification_by_samples

./: .gitignore  AWD-J.txt  main.ipynb  pyproject.toml
