[tool.poetry]
name = "abstractness"
version = "0.1.0"
description = ""
authors = ["sinyo-matu <sinyo_matu@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.2"
pandas = "^2.2.0"
openai = "^1.12.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
